--- a/glass/settings.gradle
+++ b/glass/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "headsup"
+rootProject.name = "glass"
 include ':app'
