Code for flashing LED upon detecting pulse from analog channel.

--- a/embedded/Debug/makefile
+++ b/embedded/Debug/makefile
@@ -10,8 +10,8 @@ GEN_OPTS__FLAG :=
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
-"./adc.obj" \
 "./haptic.obj" \
+"./input.obj" \
 "./main.obj" \
 "./old_main.obj" \
 "../lnk_msp430g2553.cmd" \
@@ -157,8 +157,8 @@ embedded.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "adc.obj" "haptic.obj" "main.obj" "old_main.obj" 
-	-$(RM) "adc.d" "haptic.d" "main.d" "old_main.d" 
+	-$(RM) "haptic.obj" "input.obj" "main.obj" "old_main.obj" 
+	-$(RM) "haptic.d" "input.d" "main.d" "old_main.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
