--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 gpio-cdev = "0.5"
 lstsq = "0.5.0"
 nalgebra = "0.32.1"
+once_cell = "1.17.1"
 typenum = "1.16.0"
 
 [dev-dependencies]
